src/sass/style.scss
@import 'theme';

$sm-up: 768px;
$md-up: 992px;
$lg-up: 1200px;

/* System-wide edits */

html,
body,
#globalWrapper {
  height: 100%;
}

.center-el{
  margin: 0 auto;
}

/* Bootstrap edit */

.navbar-fixed-top {
  border-width: 0px;
}

.center-block {
  display: inline-block;
  float: none !important;
  margin: 0 auto;
}

.row {
  padding: 10px 0px;
  margin-right: 0px;
  margin-left: 0px;
  @media (min-width: $sm-up) {
    padding: 10px 50px;
  }
}

/* ---------- General Edits ----------*/


/* ------ Branding -----*/

body {
  padding-top: 45px;
  color: $secondary-color;
  background-color: $primary-color;
  font-family: "Roboto", sans-serif;
  line-height: 1.7em;
  letter-spacing: 1px;
}

h1,
h2,
h3,
h4 {
  font-weight: bold;
}

h1 {
  font-size: 32px;
  @media (min-width: $sm-up){
    font-size: 40px;
  }
}

h2 {
  font-size: 24px;
  @media (min-width: $sm-up){
    font-size: 30px;
  }
}

h3 {
  font-size: 20px;
  @media (min-width: $sm-up){
    font-size: 24px;
  }
}

h4 {
  font-size: 18px;
  @media (min-width: $sm-up){
    font-size: 20px;
  }
}

p, a {
  font-size: 15px;
  @media (min-width: $sm-up){
    font-size: 18px;
  }
}

p {
  color: $secondary-color-lightest;
  text-align: justify;

}

// Keep main paragraphs black color
[class*="intro"] p {
  color:$secondary-color;
}


a {
  color: $hyper;
  &:hover {
    color: $hover;
  }
}

.btn-acerta {
  font-size: 18px;
  color: $primary-color;
  background-color: $hover;
  border-radius: 8px;
  border: 1px solid $hover-active;
  margin-top: 5px;
  padding: 10px 30px;
  position: relative;
  @media (max-width: 768px) {
  font-size:100%;
  min-width: 45%;
  max-width: 115px;
  padding: 10px 10px;
  }
  &:focus, &:hover {
    color: $primary-color;
    background-color: $hover-active;
  }
  &.submitted {
    opacity: 1;
    background-color: $hover-active;
  }
}


.btn-new {
  font-size: 18px;
  color: $hover-active;
  background-color: transparent;
  border-radius: 8px;
  border: 2px solid $hover-active;
  margin-top: 5px;
  padding: 10px 30px;
  margin-left: 20px;
  position: relative;
  @media (max-width: 768px) {
    font-size:100%;
    width: 45%;
    max-width: 115px;
    padding: 10px 10px;
  }
  &:focus, &:hover {
    color: $primary-color;
    background-color: $hover-active;
  }
  &.submitted {
    opacity: 1;
    background-color: $hover-active;
  }
}



.form-msg {
  padding: 5px;
  margin: 5px;
  text-align: center;
  display: none;
  &.active {
    display: block;
  }
}

section {
  padding: 30px 0px;
}

/* ---------    Navbar   --------- */

.navbar {
  background-color: $secondary-color;
  @media (min-width: $sm-up) {
    padding: 0 25px;
  }
}

.navbar-toggle {
  border-color: $primary-color;
  margin-top: 20px;
  margin-bottom: 21px;
  .icon-bar {
    background-color: $primary-color;
  }
}

.nav > li > a {
  padding-top: 15px;
  padding-bottom: 20px;
  font-size: 16px;
  color: $primary-color;
  &:focus,
  &.active {
    color: $primary-color;
    background-color: $hover;
  }
  &:hover {
    color: $primary-color;
    background-color: $hover-active;
  }
}

.navbar-brand>img {
  height: 30px;
  vertical-align: middle;
}

/* ---------    CTA banner   --------- */

.cta {
  background-color: $primary-color;
  width: 100%;
  padding-top: 20px;
  padding-bottom: 50px;
  background-size: cover;
  background-position: center center;
}

/* ----------  Main Page ---------- */

/* ------   Intro Picture  ------- */

.intro-banner {
  background: url(../images/car-bw-white.jpg) no-repeat;
  background-size: cover;
  background-position: center center;
  /*&:before {
    content: ' ';
    position: absolute;
    left: 0;
    top: 50px;
    width: 100%;
    height: 100%;
    background: rgba(250, 255, 250, 0.84);
  }*/
  .content {
    color: $secondary-color;
    position: relative;
    padding-top: 50px;
    letter-spacing: 2px;
    max-width: 340px;
    margin: 0 auto;
    @media (min-width: $sm-up) {
      max-width: 75%;
    }
  }
}

/* ----- How it works ----- */

.how-it-works {
  background-color: $primary-color;
  li {
    font-size: 30px;
    max-width: 400px;
    margin: 0 auto;
  }
  .diagram {
    background-image: url(../images/diagram.png);
    background-size: cover;
    background-position: center center;
    width: 100%;
    padding-bottom: 60%;
    @media (min-width: $sm-up) {
      margin: 30px;
    }
  }
}

/* ----- Customers ----- */

.customers {
  padding-bottom: 10px; 
  padding-top: 0px;
  .img-wrapper {
    min-height: 1em;
    line-height: 10em;
  }
  img {
    max-height: 150px;
    max-width: 130px;
    margin: 0px 0px;
  }
}

.advantages {
  background-color: $primary-color;
  .advantage-item {
    padding: 0px 10px;
  }
  p {
    text-align: justify;
    margin: 10px 10px;
    padding-right: 10px;
    padding-left: 30px;
    font-size: 16px;
    @media (max-width: 768px) {
      font-size: 12px;
      letter-spacing: 0.5px;
    }
    @media (min-width: 992px) {
      padding-left: 10px;
    }
  }
  h3 {
    text-align: left;
    padding-right: 10px;
    padding-left: 40px;
    @media (min-width: 992px) {
      padding-left: 10px;
    }
  }
  img {
    max-width: 50px;
    padding: 10px;
    @media (min-width: $sm-up) {
      max-width: 100px;
    }
  }
}

/* ----------  Products Page ----------*/

.products-banner {
  width: 100%;
  height: 300px;
  background-image: url(../images/products-white.jpg);
  background-size: cover;
  background-position: center center;
  .content {
    color: $secondary-color;
    position: relative;
    padding-top: 40px;
    letter-spacing: 2px;
    max-width: 340px;
    margin: 0 auto;
    @media (min-width: $sm-up) {
      max-width: 75%;
    }
  }
}


.product-intro {
  p {
    align: justify;
  }
}

.industry {
  h1 {
    height: 2em;
  }
  img {
    max-width: 120%;
    @media (min-width: $sm-up) {
      max-width: 400px;
    }
    padding: 10px;
  }
  p {
    max-width: 300px;
    margin: 0 auto;
    @media (min-width: $sm-up) {
      max-width: 400px;
    }
  }
  .row,[class*="col-"] {
    padding: 0px;
  }
  .automotive {
    padding: 30px;
    @media (min-width: $md-up) {
      border-right: 2px solid $secondary-color;
    }
  }

  .fleet {
    padding: 30px;
  }
}


/* ----------  Case Study Page ---------- */

.cases-banner {
  width: 100%;
  height: 300px;
  background-image: url(../images/case-studies-white.jpg);
  background-size: cover;
  background-position: center center;
  .content {
    color: $secondary-color;
    position: relative;
    padding-top: 40px;
    letter-spacing: 2px;
    max-width: 340px;
    margin: 0 auto;
    @media (min-width: $sm-up) {
      max-width: 75%;
    }
  }
}

.case-studies {
  padding: 0px;
  .container-fluid, .row, .bg {
    padding: 20px;
  }
  .item {
    padding-top: 20px;
    padding-bottom: 20px;
  }
  img {
    width: 90%;
    max-width: 300px;
    @media (max-width: 991px){
      display: none;
    }
  }
  p {
    max-width: 500px;
    margin: 0 auto 20px auto;
  }
}

.modal-dialog {
  max-width: 400px;
  margin: 10px auto;
}

/* ----------  About Us Page ---------- */

.about-banner {
  width: 100%;
  height: 300px;
  background-image: url(../images/about-white.jpg);
  background-size: cover;
  background-position: center center;
  .content {
    color: $secondary-color;
    position: relative;
    padding-top: 40px;
    letter-spacing: 2px;
    max-width: 340px;
    margin: 0 auto;
    @media (min-width: $sm-up) {
      max-width: 75%;
    }
  }
}

/* ------ Team ------- */

.accelerators {
  padding-bottom: 10px; 
  padding-top: 0px;
  .img-wrapper {
    min-height: 1em;
    line-height: 7em;
  }
  img {
    max-height: 70px;
    max-width: 160px;
    margin: 4px 0px;
  }
}

.team {
  // .col-md-3 {
  //   display: block;
  //   vertical-align: top;
  //   @media (min-width: $md-up) {
  //     display: inline-block;
  //   }
  // }
  .row {
    padding: 10px 15%; 
    @media (min-width: $sm-up){
      display: flex;
      flex-wrap: wrap;
    }
    @media (max-width: 720px) {
      margin: 0px -15px 10px;
    }
  }
  .picture {
    border-radius: 50%;
    &:hover {
      img {
        opacity: 0.3;
      }
      a {
        opacity: 1;
      }
    }
  }

  a {
    opacity: 0;
    position: absolute;
    top: 35%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transition: .5s ease;
  }

  img {
    width: 100%;
    border-radius: 50%;
    max-width: 325px;
    transition: .5s ease;
  }
  h3 {
    // height: 2em;
  }
  h4 {
    // height: 2em;
    color: $secondary-color-lightest;
  }
  .longfix {
    font-size: 22px;
  }
}


/* ----------  Contact Page ---------- */

#map {
  padding-bottom: 75%;
  width: 100%;
}

.contact-banner {
  width: 100%;
  height: 300px;
  background-image: url(../images/contact-white.jpg);
  background-size: cover;
  background-position: center center;
  .content {
    color: $secondary-color;
    position: relative;
    padding-top: 40px;
    letter-spacing: 2px;
    max-width: 340px;
    margin: 0 auto;
    @media (min-width: $sm-up) {
      max-width: 75%;
    }
  }
}
.emails {
  .col-md-3 {
    display: block;
    vertical-align: top;
    @media (min-width: $md-up) {
      display: inline-block;
    }
  }
}

#contact {
  p, form {
    max-width: 500px;
    margin: 0px auto;
    @media (min-width: $md-up) {
      margin-left: 0px;
      margin-right: 0px;
    }
  }
}

#about-form {
  .input-group {
    margin-top: 10px;
  }
  button {
    margin-top: 10px;
    width: 100%;
  }
  textarea {
    width: 100%;
    height: 111%;
    border-color: rgb(204, 204, 204);
    padding: 2px 12px;
  }
}

/* -------- Footer ---------- */

footer {
  background-color: $secondary-color;
  p {
    font-size: 12px;
    margin-top: 10px;
    color: $primary-color;
  }
  ul {
    @media (min-width: $md-up) {
      text-align: right;
    }
    a {
      padding-top: 7px;
      .fa-inverse {
        color: $secondary-color;
      }
      color: $primary-color;
      &:active, &:hover, &:focus {
        color: $hover;
      }
    }
    .fa-2x {
      font-size: 1.5em;
    }
  }
}

